--- a/integration-tests/custom_errorvalue.sh.cmp
+++ b/integration-tests/custom_errorvalue.sh.cmp
@@ -8,3 +8,13 @@ injection mode: replace
 43
 
 Experiment ends.
+Experiment begins (loglevel: 3).
+config for target 0
+callCount: 1
+occurrence: 0
+injection mode: replace
+[injection] function: 'int test()' in file 'main.cc' in line '14':
+	10 ---> 44
+44
+
+Experiment ends.
