--- a/integration-tests/posix_result_env.sh.cmp
+++ b/integration-tests/posix_result_env.sh.cmp
@@ -6,4 +6,4 @@ occurrence: 0
 injection mode: replace
 [injection] also modifying errno to 24
 [injection] function: '__sFILE *fopen(const char *,const char *)' in file 'main.cc' in line '4':
-	-1989828560 ---> 0
+	-xxxxxxx ---> 0
